--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="login.css" />
     <title>Document</title>
   </head>
   <body>
@@ -25,15 +25,11 @@
           z-index: 1;
         "
       >
-        <h5 style="padding-left: 20px; font-weight: bold">
+        <h5 style="padding-left: 20px; font-weight: bold" class="heading">
           Deliver IT Value beyond Expectations
         </h5>
         <div class="d-flex">
-          <img
-            src="../New folder/asts/image (2).png"
-            alt="log"
-            class="logImag"
-          />
+          <img src="asts/image (2).png" alt="log" class="logImag" />
         </div>
       </nav>
       <div class="main-Div">
@@ -41,8 +37,15 @@
         <div class="circular-parent">
           <div class="circular"></div>
           <div class="login-page">
-            <form style="padding-left: 50px; padding-top: 30px">
-              <h5 style="padding-left: 55px; padding-bottom: 40px">Login</h5>
+            <form
+              style="
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+              "
+            >
+              <h5 style="margin: 30px 0px 30px 0px">Login</h5>
               <input type="text" placeholder="User ID" />
 
               <input type="password" placeholder="Password" />
