I  change the inline styling to sepret file css

--- a/login.html
+++ b/login.html
@@ -15,19 +15,8 @@
   </head>
   <body>
     <div>
-      <nav
-        class="navbar navbar-light"
-        style="
-          border-bottom: 2px solid;
-          background-color: white;
-          width: 100%;
-          border-color: #68a7f1;
-          z-index: 1;
-        "
-      >
-        <h5 style="padding-left: 20px; font-weight: bold" class="heading">
-          Deliver IT Value beyond Expectations
-        </h5>
+      <nav class="navbar navbar-light" id="navbar">
+        <h5 class="heading">Deliver IT Value beyond Expectations</h5>
         <div class="d-flex">
           <img src="asts/image (2).png" alt="log" class="logImag" />
         </div>
@@ -37,15 +26,8 @@
         <div class="circular-parent">
           <div class="circular"></div>
           <div class="login-page">
-            <form
-              style="
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-              "
-            >
-              <h5 style="margin: 30px 0px 30px 0px">Login</h5>
+            <form class="login-form">
+              <h5 class="login-text">Login</h5>
               <input type="text" placeholder="User ID" />
 
               <input type="password" placeholder="Password" />
