--- a/otp.html
+++ b/otp.html
@@ -15,19 +15,8 @@
   </head>
   <body>
     <div>
-      <nav
-        class="navbar navbar-light"
-        style="
-          border-bottom: 2px solid;
-          background-color: white;
-          width: 100%;
-          border-color: #68a7f1;
-          z-index: 1;
-        "
-      >
-        <h5 style="padding-left: 20px; font-weight: bold" class="heading">
-          Deliver IT Value beyond Expectations
-        </h5>
+      <nav class="navbar navbar-light" id="nav-bar">
+        <h5 class="heading">Deliver IT Value beyond Expectations</h5>
         <div class="d-flex">
           <img src="asts/image (2).png" alt="log" class="logImag" />
         </div>
@@ -37,10 +26,8 @@
         <div class="circular-parent">
           <div class="circular"></div>
           <div class="login-page">
-            <form style="padding-left: 50px; padding-top: 30px">
-              <h5 style="padding-left: 22px; padding-bottom: 22px">
-                Authenticator App
-              </h5>
+            <form class="otp-form">
+              <h5 class="auth-text">Authenticator App</h5>
 
               <img src="asts/image (3).png" class="form-Image" alt="" />
               <br />
